# Compound-AI-Router

./: .gitignore  ARCRunTest.py  EXPERIMENT_GUIDE.md  README.md  analyze_router_thresholds.py  cai_results.json  cai_results_summary.json  claude_llm.py  compound_ai_system.py  dataloader.py  evaluation.py  experiment.sh  llm_factory.py  llm_interface.py  main.py  model.py  mps.py  ollama_llm.py  pyproject.toml  query_router.py  query_util.py  router_evaluation.py  run_all_experiments.sh  test.py  test_compound_ai_system.py  test_results.json  train_router.py  util.py  visualize.py
cai_evaluation/: cai_results.json
configs/: default.yaml  test_config_random.yml
configs/evaluation/: compound.yaml  default.yaml  oracle.yaml  random.yaml
evaluation/: example
scripts/: analyze_gpt_qwen_threshold_results.py  analyze_router_thresholds.py  analyze_threshold_results.py  arc_run_test.py  comprehensive_router_evaluation.py  create_recall_cost_curve.py  ensemble_router_training.py  hyperparameter_tuning.py  router_evaluation.py  run_evaluation.py  run_threshold_experiments.py  run_threshold_experiments_gpt_qwen.py  test_llm_interfaces.py  threshold_sensitivity_analysis.py  train_router.py
src/: __init__.py  compound_ai_system.py
src/data/: __init__.py  dataloader.py  gsm8k_data_manager.py  mmlu_data_manager.py  multi_dataset_manager.py  router_dataset.py
src/models/: __init__.py  claude_llm.py  ollama_llm.py  (+2 more)
tests/: test_model_pricing.py  test_model_pricing_fixed.py
tools/: README.md
visualization/: __init__.py  improved_results_visualizer.py  results_visualizer.py
(+86 files in other folders)
